--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -352,11 +352,10 @@
                                    class="link-btn">
                                     <span data-bind="ltext: 'application.applicationSummary'"></span></a></li>
 
-                            <li data-bind="if: !_.isEmpty(metadata()) && $root.authorization.ok('store-tos-metadata-for-application') && features.enabled('arkistointi'),
-                                           css: {'active': $parent.selectedTabName() === 'metadata'}">
-                                <a data-bind="click: changeTab" href="#" data-target="metadata" data-test-id="application-open-tasks-tab"
-                                   class="link-btn">
-                                    <span data-bind="ltext: 'attachment.tosMetadata'"></span>
+                            <li data-bind="if: !_.isEmpty(metadata()) && $root.authorization.ok('permanent-archive-enabled') && features.enabled('arkistointi') && $root.application.inPostVerdictState(),
+                                           css: {'active': $parent.selectedTabName() === 'archival'}">
+                                <a data-bind="click: changeTab" href="#" data-target="archival" data-test-id="application-open-archival-tab" class="link-btn">
+                                    <span data-bind="ltext: 'arkistointi'"></span>
                                 </a></li>
 
                             <li data-bind="if: $root.authorization.ok('publish-bulletin-enabled'),
@@ -881,19 +880,13 @@
                     </div>
                     <!-- /ko -->
 
-                    <!-- Metadata tab -->
+                    <!-- Archival tab -->
 
-                    <!-- ko if: selectedTabName() === 'metadata' && $root.authorization.ok("store-tos-metadata-for-application") -->
-                    <div id="application-metadata-tab" class="tab-content">
-                        <div data-bind="if: features.enabled('arkistointi')">
-                            <div class="feature">
-                                <!-- ko if: $root.application.inPostVerdictState() -->
-
-                                <!-- /ko -->
-                                <div data-bind="component: {name: 'archival-summary',
-                                                params: {application: application}}"></div>
-                            </div>
-                        </div>
+                     <!--ko if: selectedTabName() === 'archival' && features.enabled('arkistointi') && $root.authorization.ok("permanent-archive-enabled") && $root.application.inPostVerdictState() -->
+                    <div id="application-archival-tab" class="tab-content">
+                      <div>
+                        <div data-bind="component: {name: 'archival-summary', params: {application: application}}"></div>
+                      </div>
                     </div>
                     <!-- /ko -->
 
