--- a/resources/private/ui-components/applications-search/applications-search-template.html
+++ b/resources/private/ui-components/applications-search/applications-search-template.html
@@ -56,7 +56,7 @@
           <div data-bind="component: {name: 'applications-search-filter', params: {dataProvider: dataProvider}}" class="applications-search-component"></div>
           <!-- ko if: externalApi.enabled -->
           <div data-bind="css: {'feature': features.enabled('louhipalvelin')}">
-            <button data-bind="click: externalApi.showPermitsOnMap"
+            <button data-bind="click: externalApi.showPermitsOnMap, visible: gotResults"
                     data-test-id="external-show-on-map">
               <i class="lupicon-location"></i>
               <span data-bind="text: 'N\u00E4yt\u00E4 hankkeet kartalla'"></span></button>
