--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -182,7 +182,7 @@
                                        value: visibility,
                                        enable: $root.authorization.ok('set-attachment-visibility') && editable"/>
                   </div>
-                  <div data-bind="if: features.enabled('arkistointi') && latestVersion">
+                  <div data-bind="if: features.enabled('tiedonohjaus') && latestVersion">
                     <div class="feature archive-valid" data-bind="with: latestVersion">
                       <div>
                         <span data-bind="ltext: 'archive.valid-format'"></span>:
