Nicer checkbox styles

--- a/resources/private/admin/create-scope-template.html
+++ b/resources/private/admin/create-scope-template.html
@@ -1,22 +1,26 @@
 <script class="ko-template" type="text/x-jquery-tmpl" id="create-scope-template">
 <div class="content">
-  <label>Hakemustyyppi</label>
-  <select data-bind="options: params.permitTypes,
+  <label class="form-label">Hakemustyyppi</label>
+  <select data-bind="options: permitTypes,
                      optionsText: _.partial(permitTypeLoc),
                      value: permitType"></select>
-  <label>Kunta</label>
+  <label class="form-label">Kunta</label>
   <div data-bind="component: {name: 'autocomplete',
                               params: {options: municipalities,
                                        selectedOption: municipality}}"></div>
-  <label>Hakemukset p&auml;&auml;ll&auml;</label>
-  <input type="checkbox" data-bind="checked: applicationEnabled" class="form-input">
-  <label>Neuvontapyynn&ouml;t p&auml;&auml;ll&auml;</label>
-  <input type="checkbox" data-bind="checked: infoRequests" class="form-input">
-  <label>Avoin neuvontapyynt&ouml; p&auml;&auml;ll&auml;</label>
-  <input type="checkbox" data-bind="checked: openInfoRequests">
-  <label>S&auml;hk&ouml;postiosoite avoimille neuvontapyynn&ouml;ille</label>
+  <div style="margin-top: 1em"><label class="form-label">
+    <input type="checkbox" data-bind="checked: applicationEnabled" class="form-input">
+    Hakemukset p&auml;&auml;ll&auml;
+  </label></div>
+  <div><label class="form-label">
+    <input type="checkbox" data-bind="checked: infoRequests" class="form-input">
+    Neuvontapyynn&ouml;t p&auml;&auml;ll&auml;</label></div>
+  <div><label class="form-label">
+    <input type="checkbox" data-bind="checked: openInfoRequests">
+    Avoin neuvontapyynt&ouml; p&auml;&auml;ll&auml;</label></div>
+  <label class="form-label">S&auml;hk&ouml;postiosoite avoimille neuvontapyynn&ouml;ille</label>
   <input type="text" data-bind="value: openInfoRequestEmail">
-  <label>Palvelu avataan</label>
+  <label class="form-label">Palvelu avataan</label>
   <input type="text" data-bind="datepicker: opening">
 
   <div data-bind="component: {name: 'submit-button-group',
