--- a/resources/private/attachment/attachment.html
+++ b/resources/private/attachment/attachment.html
@@ -182,7 +182,7 @@
                                        value: visibility,
                                        enable: $root.authorization.ok('set-attachment-visibility') && editable"/>
                   </div>
-                  <div data-bind="if: features.enabled('tiedonohjaus') && latestVersion">
+                  <div data-bind="if: features.enabled('tiedonohjaus') && $root.authorization.ok('permanent-archive-enabled') && latestVersion">
                     <div class="feature archive-valid" data-bind="with: latestVersion">
                       <div>
                         <span data-bind="ltext: 'archive.valid-format'"></span>:
@@ -222,7 +222,7 @@
                 </button>
               </div>
 
-              <!-- ko if: features.enabled('tiedonohjaus') && !_.isEmpty(metadata()) && $root.authorization.ok('store-tos-metadata-for-attachment') -->
+              <!-- ko if: features.enabled('tiedonohjaus') && $root.authorization.ok('permanent-archive-enabled') && !_.isEmpty(metadata()) && $root.authorization.ok('store-tos-metadata-for-attachment') -->
               <div class="feature" style="margin-top: 15px;">
                 <button id="show-tos-metadata" class="btn"
                         data-bind="click: toggleTosMetadata, visible: !_.isEmpty(metadata()) && $root.authorization.ok('store-tos-metadata-for-application')">
