--- a/resources/private/ui-components/applications-search/applications-search-template.html
+++ b/resources/private/ui-components/applications-search/applications-search-template.html
@@ -57,7 +57,7 @@
           <!-- ko if: externalApi.enabled -->
           <div data-bind="css: {'feature': features.enabled('louhipalvelin')}">
             <button data-bind="click: externalApi.showPermitsOnMap, visible: gotResults"
-                    data-test-id="external-show-on-map">
+                    data-test-id="external-show-permits-on-map">
               <i class="lupicon-location"></i>
               <span data-bind="text: 'N\u00E4yt\u00E4 hankkeet kartalla'"></span></button>
           </div>
