Remove tiedonohjaus feature guards from front-end

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -377,7 +377,7 @@
                                     <span data-bind="ltext: 'arkistointi'"></span>
                                 </a></li>
 
-                            <li data-bind="if: tosFunction() && $root.authorization.ok('permanent-archive-enabled') && features.enabled('tiedonohjaus'),
+                            <li data-bind="if: tosFunction() && $root.authorization.ok('permanent-archive-enabled'),
                                              css: {'active': $parent.selectedTabName() === 'caseFile'}">
                               <a data-bind="click: changeTab" href="#" data-target="caseFile" data-test-id="application-open-caseFile-tab" class="link-btn">
                                 <span data-bind="ltext: 'caseFile.tab'"></span>
@@ -915,7 +915,7 @@
                     </div>
                     <!-- /ko -->
 
-                    <!--ko if: selectedTabName() === 'caseFile' && features.enabled('tiedonohjaus') && $root.authorization.ok("permanent-archive-enabled") -->
+                    <!--ko if: selectedTabName() === 'caseFile' && $root.authorization.ok("permanent-archive-enabled") -->
                     <div id="application-caseFile-tab" class="tab-content">
                       <div>
                         <div data-bind="component: {name: 'case-file', params: {application: application}}"></div>
