show comments without legacy comment-model (WIP)

--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -43,7 +43,8 @@
                                                 params: {application: application,
                                                          authorization: authorization,
                                                          authorities: authorities,
-                                                         currentPage: currentPage}}"></div>
+                                                         currentPage: currentPage,
+                                                         comments: sidePanelService.comments}}"></div>
                   </div>
               </div>
               <!-- ko if: authorization.ok('add-authority-notice')-->
