Show PDF/A instruction text in upload if organization has archive enabled

--- a/resources/public/lp-static/html/upload-1.114.html
+++ b/resources/public/lp-static/html/upload-1.114.html
@@ -21,8 +21,8 @@
   <form id="attachmentUploadForm" action="/api/upload/attachment" method="post" enctype="multipart/form-data" onsubmit="LUPAPISTE.ModalProgress.show();">
     <div class="upload-instructions">
       <p data-bind="ltext: 'attachment.upload.instructions.document'"></p>
-      <div data-bind="if: features.enabled('arkistointi')">
-        <div class="feature">
+      <div data-bind="if: archiveEnabled">
+        <div>
           <p data-bind="ltext: 'attachment.upload.instructions.pdfa'"></p>
         </div>
       </div>
