Guest invitation now works for applicants.
It seems that two roles are needed in the future:
guest and guestAuthority in order to easily
differentiate between guests with different
orgins (inviters).

--- a/resources/private/application/application.html
+++ b/resources/private/application/application.html
@@ -482,6 +482,11 @@
                                 </div>
                             </div>
                         </div>
+
+                        <div data-bind="component: 'application-guests'">
+
+                        </div>
+
                         <p data-bind="lhtml: 'required.field.desc'"></p>
 
                         <!-- docgen generated content: -->
