--- a/resources/private/ui-components/application-guests/application-guests-template.html
+++ b/resources/private/ui-components/application-guests/application-guests-template.html
@@ -16,6 +16,20 @@
                                  waiting: waiting">
             <p data-bind="ltext: 'application-guests.info'"></p>
             <!-- ko if: $parent.isAuthority -->
+            <label class="mandatory"
+                   data-bind="ltext: 'application-guests.caption'"></label>
+            <table class="mandatory">
+              <tbody data-bind="foreach: $parent.guestAuthorities">
+                <tr>
+                  <td><input type="radio" name="guest-authorities"
+                             data-bind="attr: {value: $data.email},
+                                        checked: $parents[1].email" /></td>
+                  <td class="full" data-bind="text: $data.name"></td>
+                  <td class="full" data-bind="text: $data.email"></td>
+                  <td class="full" data-bind="text: $data.role"></td>
+                </tr>
+              </tbody>
+            </table>
             <!-- /ko -->
             <!-- ko ifnot: $parent.isAuthority -->
             <label data-bind="ltext: 'guest-authority.email',
