pass show all comments parameter from service to component

--- a/resources/private/ui-components/side-panel/side-panel-template.html
+++ b/resources/private/ui-components/side-panel/side-panel-template.html
@@ -45,7 +45,8 @@
                                                          authorities: sidePanelService.authorities,
                                                          currentPage: currentPage,
                                                          comments: sidePanelService.comments,
-                                                         showAllComments: sidePanelService.showAllComments}}"></div>
+                                                         showAllComments: sidePanelService.showAllComments,
+                                                         mainConversation: sidePanelService.mainConversation}}"></div>
                   </div>
               </div>
               <!-- ko if: authorization.ok('add-authority-notice')-->
