--- a/resources/private/application/inforequest.html
+++ b/resources/private/application/inforequest.html
@@ -170,7 +170,15 @@
 
         <div class="inforequest-conversation">
           <h2  data-bind="ltext: 'inforequest.comments'"></h2>
-          <div data-bind="template: {name: 'comment-template', data: {comment: applicationComment, authorities: authorities, mainConversation: true, authorization: $root.authorization, infoRequest: $root.application.infoRequest}}"></div>
+          <div data-bind="component: {name: 'conversation',
+                                      params: {application: sidePanelService.application,
+                                               authorization: sidePanelService.authorization,
+                                               authorities: sidePanelService.authorities,
+                                               currentPage: sidePanelService.currentPage,
+                                               comments: sidePanelService.comments,
+                                               showAllComments: sidePanelService.showAllComments,
+                                               mainConversation: sidePanelService.mainConversation}}"></div>
+
         </div>
 
       </div>
