--- a/resources/private/application/archival-summary-template.html
+++ b/resources/private/application/archival-summary-template.html
@@ -105,7 +105,7 @@
           </div>
         </div>
 
-        <div data-bind="slider: $data.showAdditionalControls" class="additional-controls">
+        <div data-bind="if: $data.showAdditionalControls" class="additional-controls">
           <div class="left">
             <div class="additional-data-container">
               <div class="header" data-bind="ltext: 'attachment.changeType'"></div>
