--- a/resources/private/application/case-file-template.html
+++ b/resources/private/application/case-file-template.html
@@ -11,7 +11,7 @@
         <th data-bind="ltext: 'caseFile.action'"></th>
         <th data-bind="ltext: 'document'"></th>
         <th data-bind="ltext: 'caseFile.documentDate'"></th>
-        <th>Lis\u00e4\u00e4j\u00e4</th>
+        <th data-bind="ltext: 'lisaaja'"></th>
       </tr>
       </thead>
       <tbody data-bind="foreach: caseFile">
