--- a/resources/private/ui-components/application-guests/application-guests-template.html
+++ b/resources/private/ui-components/application-guests/application-guests-template.html
@@ -39,20 +39,23 @@
                                  waiting: waiting">
             <p data-bind="ltext: 'application-guests.info'"></p>
             <!-- ko if: $parent.isAuthority -->
-            <label class="mandatory"
-                   data-bind="ltext: 'application-guests.caption'"></label>
-            <table class="mandatory">
-              <tbody data-bind="foreach: $parent.guestAuthorities">
-                <tr>
-                  <td><input type="radio" name="guest-authorities"
-                             data-bind="attr: {value: $data.email},
-                                        checked: $parents[1].email" /></td>
-                  <td class="full" data-bind="text: $data.name"></td>
-                  <td class="full" data-bind="text: $data.email"></td>
-                  <td class="full" data-bind="text: $data.role"></td>
-                </tr>
-              </tbody>
-            </table>
+            <div data-bind="visible: $parent.guestAuthorities().length">
+              <label class="mandatory"
+                     data-bind="ltext: 'application-guests.caption'">
+              </label>
+              <table class="mandatory">
+                <tbody data-bind="foreach: $parent.guestAuthorities">
+                  <tr>
+                    <td><input type="radio" name="guest-authorities"
+                               data-bind="attr: {value: $data.email},
+                                          checked: $parents[1].email" /></td>
+                    <td class="full" data-bind="text: $data.name"></td>
+                    <td class="full" data-bind="text: $data.email"></td>
+                    <td class="full" data-bind="text: $data.role"></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
             <!-- /ko -->
             <!-- ko ifnot: $parent.isAuthority -->
             <label data-bind="ltext: 'guest-authority.email',
@@ -62,13 +65,15 @@
                    data-bind="textInput: $parent.email,
                               attr: {id: $parent.emailId}" />
             <!-- /ko -->
-            <label data-bind="ltext: 'application-guests.message',
-                              attr: {'for': $parent.messageId }"></label>
-            <textarea data-bind="value: $parent.message,
-                                 attr: {id: $parent.messageId}"></textarea>
+            <div data-bind="visible: !$parent.isAuthority || $parent.guestAuthorities().length">
+              <label data-bind="ltext: 'application-guests.message',
+                                attr: {'for': $parent.messageId }"></label>
+              <textarea data-bind="value: $parent.message,
+                                   attr: {id: $parent.messageId}"></textarea>
+            </div>
             <div class="error"
-                 data-bind="visible: $parent.guestError,
-                            ltext: $parent.guestError"></div>
+                 data-bind="visible: $parent.error,
+                            ltext: $parent.error"></div>
           </bubble-dialog>
         </div>
       </script>
