--- a/resources/private/ui-components/statement/statements-table/statements-table-template.html
+++ b/resources/private/ui-components/statement/statements-table/statements-table-template.html
@@ -27,7 +27,8 @@
                   </tr>
               </thead>
               <tbody data-bind="foreach: $data.statements()">
-                  <tr class="statement-row">
+                  <tr class="statement-row"
+                      data-bind="click: $component.openStatement">
                       <td>
                         <i class="lupicon-paperclip" data-bind="visible: $component.hasAttachment($data),
                                                                 attr: {'title': loc('tooltip.statement-or-reply-has-attachments')}"></i>
@@ -35,7 +36,6 @@
                       <td>
                           <span data-bind="if: $component.canAccessStatement($data)">
                               <a href="#" data-bind="text: $data.person.text,
-                                                     click: $component.openStatement,
                                                      attr: {'data-test-id' : 'open-statement-' + $index()}"></a>
                           </span>
                           <span data-bind="ifnot: $component.canAccessStatement($data)">
