--- a/resources/private/ui-components/application-guests/application-guests-template.html
+++ b/resources/private/ui-components/application-guests/application-guests-template.html
@@ -5,7 +5,7 @@
       <script type="text/x-jquery-tmpl" id="application-guests-template">
         <div class="application-guests">
           <table class="auth-table"
-                 data-bind="visible: allGuests">
+                 data-bind="visible: allGuests().length">
             <thead>
               <th data-bind="ltext: 'application-guests.user'"></th>
               <th data-bind="ltext: 'application-guests.inviter'"></th>
@@ -27,7 +27,9 @@
               </tr>
             </tbody>
           </table>
-          <button class="positive" data-bind="click: toggleBubble">
+          <button class="positive"
+                  data-bind="click: toggleBubble,
+                             visible: show.addButton()">
             <i class="lupicon-circle-plus"></i>
             <span data-bind="ltext: 'guest-authority.add'"></span>
           </button>
@@ -39,7 +41,7 @@
                                  waiting: waiting">
             <p data-bind="ltext: 'application-guests.info'"></p>
             <!-- ko if: $parent.isAuthority -->
-            <div data-bind="visible: $parent.guestAuthorities().length">
+            <div data-bind="visible: $parent.show.inviteTable">
               <label class="mandatory"
                      data-bind="ltext: 'application-guests.caption'">
               </label>
@@ -65,7 +67,7 @@
                    data-bind="textInput: $parent.email,
                               attr: {id: $parent.emailId}" />
             <!-- /ko -->
-            <div data-bind="visible: !$parent.isAuthority || $parent.guestAuthorities().length">
+            <div data-bind="visible: $parent.show.inviteMessage">
               <label data-bind="ltext: 'application-guests.message',
                                 attr: {'for': $parent.messageId }"></label>
               <textarea data-bind="value: $parent.message,
