--- a/resources/private/mypage/mypage.html
+++ b/resources/private/mypage/mypage.html
@@ -138,8 +138,9 @@
                                                      disable: disable,
                                                      id: 'architect.fise',
                                                      lLabel: 'userinfo.architect.fise'}}"></div>
-
-                <div class="col-1"
+              </div>
+              <div class="row">
+                <div class="col-3"
                      data-bind="component: {name: 'select-field',
                                             params: {value: fiseKelpoisuus,
                                                      disable: disable,
